--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,11 @@
 }
 
 body {
-   background-color: #E5E5E5;
-   color: var(--primary-text-color);
-   font-family: Roboto, sans-serif;
+    background-color: #E5E5E5;
+    color: var(--primary-text-color);
+    font-family: Roboto, sans-serif;
+    letter-spacing: 0.03em;
+}
 ul {
     list-style: none;
 }
@@ -15,10 +17,22 @@ ul {
 .logo {
     color: #000000;
     font-family: Raleway, sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1,2;
+    text-decoration: none;
+}
+.accent {
+    color: #2196F3;
 }
 /* site-nav */
 .site-nav .link {
-    color: var(--primary-text-color);
+    color: var(--title-text-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-decoration: none;
 }
 .site-nav .link:hover, .link:focus {
     color: var(--accent-color);
@@ -27,32 +41,103 @@ ul {
 color: var(--accent-color);
 }
 .contact .link {
-    color: var(--primary-text-color)
+    color: var(--primary-text-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-decoration: none;
 }
 .contact .link:hover, .link:focus {
     color:var(--accent-color)
 }
 .main-title {
     color: #FFFFFF;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-align: center;
+    letter-spacing: 0.06em;
 }
-.section-title {
-    color: var(--title-text-color);
-}
-.specifics-list .title {
-    color: var(--title-text-color);
-}
-.team-list .title {
-    color: var(--title-text-color);
+.main {
+    background-color: #2F303A;
 }
 /* button */
 .button {
     color: #FFFFFF;
     background-color: #2196F3;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
 }
+.button {
+    cursor: pointer;
+}
+.section-title {
+    color: var(--title-text-color);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+}
+.specifics-list .title {
+    color: var(--title-text-color);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
 
-
+    text-transform: uppercase;
+}
+.specifics-list .text {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+}
+/* команда */
+.team-list .title {
+    color: var(--title-text-color);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.19;
+    /* text-align: center; */
+}
+.team-list .text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.19;
+    /* text-align: center; */
+}
 /* стилі для портфоліо */
 /* filters  */
-.filter {
+.filter-list .filter {
     color: var(--title-text-color);
+    background-color: #F5F4FA;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    text-align: center;
 }
+.filter-list .filter:hover, .filter:focus {
+    color: #FFFFFF;
+    background-color: #2196F3;
+}
+.filter {
+    cursor: pointer;
+}
+.products .products-title {
+    color: var(--title-text-color);
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+}
+.products .products-text {
+    color: var(--primary-text-color);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 30px;
+}
+/* footer */
