--- a/css/styles.css
+++ b/css/styles.css
@@ -4,16 +4,28 @@
     --accent-color: #2196F3;
     --primary-white-color: #E5E5E5;
 }
-
 body {
     background-color: var(--primary-white-color);
-    
     color: var(--primary-text-color);
+    font-size: 14px;
     font-family: Roboto, sans-serif;
     letter-spacing: 0.03em;
 }
-ul {
+/* ul {
     list-style: none;
+} */
+.list {
+    list-style: none;
+}
+.link {
+    text-decoration: none;
+}
+.section-title {
+    color: var(--title-text-color);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
 }
 /* logo */
 .logo-primary {
@@ -22,7 +34,6 @@ ul {
     font-weight: 700;
     font-size: 26px;
     line-height: 1,2;
-    text-decoration: none;
 }
 .accent {
     color: #2196F3;
@@ -31,10 +42,8 @@ ul {
 .site-nav .link {
     color: var(--title-text-color);
     font-weight: 500;
-    font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    text-decoration: none;
 }
 .site-nav .link:hover, .link:focus {
     color: var(--accent-color);
@@ -45,23 +54,22 @@ color: var(--accent-color);
 .contact .link {
     color: var(--primary-text-color);
     font-weight: 500;
-    font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    text-decoration: none;
 }
 .contact .link:hover, .link:focus {
     color:var(--accent-color)
 }
-.main-title {
+.hero-title {
     color: #FFFFFF;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
     text-align: center;
     letter-spacing: 0.06em;
+    text-transform: uppercase;
 }
-.main {
+.hero {
     background-color: #2F303A;
 }
 /* button */
@@ -74,28 +82,17 @@ color: var(--accent-color);
     align-items: center;
     text-align: center;
     letter-spacing: 0.06em;
+    font-family: inherit;
 }
 .button {
     cursor: pointer;
 }
-.section-title {
-    color: var(--title-text-color);
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
-    text-align: center;
-}
 .specifics-list .title {
     color: var(--title-text-color);
-    font-weight: 700;
-    font-size: 14px;
     line-height: 1.14;
-
     text-transform: uppercase;
 }
 .specifics-list .text {
-    font-weight: 400;
-    font-size: 14px;
     line-height: 1.71;
 }
 /* команда */
@@ -107,7 +104,6 @@ color: var(--accent-color);
     /* text-align: center; */
 }
 .team-list .text {
-    font-weight: 400;
     font-size: 16px;
     line-height: 1.19;
     /* text-align: center; */
@@ -121,6 +117,7 @@ color: var(--accent-color);
     font-size: 16px;
     line-height: 1.62;
     text-align: center;
+    font-family: inherit;
 }
 .filter-list .filter:hover, .filter:focus {
     color: #FFFFFF;
@@ -129,16 +126,18 @@ color: var(--accent-color);
 .filter {
     cursor: pointer;
 }
+.filter .active {
+    background-color: #2196F3;
+    color: #FFFFFF;
+}
 .products .products-title {
     color: var(--title-text-color);
-    font-weight: 700;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
 }
 .products .products-text {
     color: var(--primary-text-color);
-    font-weight: 400;
     font-size: 16px;
     line-height: 30px;
 }
@@ -146,30 +145,22 @@ color: var(--accent-color);
 .page-footer {
     background-color: #2F303A;
 }
-
 .logo-secondary {
     color: #FFFFFF;
     font-family: 'Raleway';
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
-    text-decoration: none;
 }
 .address {
     font-style: normal;
     color: #FFFFFF;
-    font-weight: 400;
-    font-size: 14px;
     line-height: 1.71;
-    text-decoration: none;
 }
 .footer-contacts {
     color: rgba(255, 255, 255, 0.6);
     font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
     line-height: 1.71;
-    text-decoration: none;
 }
 .footer-contacts:hover, .footer-contacts:focus {
     color: var(--accent-color)
